# zeit-on-tolino

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  sync.py  zeit_on_tolino.py
.github/workflows/: sync_to_tolino_cloud.yml  test.yml  update_fork.yml
tests/: conftest.py  test_env_vars.py  test_epub.py  test_tolino.py  test_zeit.py
zeit_on_tolino/: env_vars.py  epub.py  tolino.py  tolino_partner.py  web.py  zeit.py
