[tool.poetry]
name = "zeit-on-tolino"
version = "0.1.0"
description = "Service to auto-upload the ZEIT 🗞 e-paper to your tolino cloud library 📚"
authors = ["Fabian Gebhart <fabian.gebhart@gmail.com>"]
license = "MIT License"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
pydantic = "^1.9.1"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^24.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
ipython = "^8.10.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 121
include_trailing_comma = true

[tool.black]
line-length = 121

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
